# SplitRun

./: CMakeLists.txt  README.md
cmake/: SplitRunConfig.cmake
cpp/: SplitRun.cpp  SplitRun.h
tests/: CMakeLists.txt
tests/cpp/: .gitignore  CMakeLists.txt  SplitRunSpikes.cpp
